# SSCSPLUS

./: .env.example  .gitignore  Procfile  manage.py  pyproject.toml
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py
sscsplus/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/: script.js
templates/accounts/: dashboard.html  ft.html  login.html  pin_change.html  statement.html  transfer.html
templates/admin/: sscs_stats.html
