[project]
name = "sscsplus"
version = "0.1.0"
description = "Secure Salary Credit System Plus - Finance Management"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-jazzmin>=3.0.4",
    "gunicorn>=26.0.0",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]

[tool.uv]
dev-dependencies = []
